<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/colourprimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ideas" />

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="50dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/abc1"


            android:textSize="34sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/abc3"
            android:textSize="34sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/abc4"
            android:textSize="34sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="171dp"
        android:text="@string/klm9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/user_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="186dp"

        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/klm8"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


