<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourprimary"
    tools:context=".logic">

    <LinearLayout
        android:id="@+id/size"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="82dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="353dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ideas" />

        <EditText
            android:id="@+id/etemailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="16sp" />


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/btmlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btnprimary"
            android:text="@string/klm5" />

        <TextView

            android:id="@+id/loginnow"
            android:layout_width="341dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/klm6"
            android:textAlignment="center"
            android:textColor="@color/colourprimarytext" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>